fix styling on mobile and tablet

--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -88,22 +88,29 @@ header {
 
 .hero {
   text-align: center;
-  place-content: center;
   color: map.get(variables.$colors, "white");
   background-image: url("/assets/images/home-hero-mobile.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 40.625rem;
+  position: relative;
 
+  .container {
+    padding-top: clamp(7.1875rem, 6.3512rem + 3.5681vw, 9.5625rem);
+  }
   h1 {
     font-size: clamp(2.5rem, 2.1479rem + 1.5023vw, 3.5rem);
     letter-spacing: -1.79px;
   }
 
+  p {
+    margin: 1.5rem 0 2rem;
+  }
+
   .arrow {
     position: absolute;
-    left: -100%;
-    top: 100%;
+    left: -85%;
+    bottom: 2rem;
   }
 
   .circles {
@@ -143,15 +150,20 @@ header {
     background-image: url("/assets/images/home-hero-tablet.jpg");
 
     .arrow {
-      left: -10%;
-      top: 120%;
+      left: -7.94rem;
     }
 
     .circles {
       visibility: visible;
       height: auto;
-      top: 160%;
-      right: -10%;
+      bottom: 3em;
+      right: -2rem;
     }
+  }
+}
+
+@media (min-width: 64rem) {
+  .hero {
+    background-image: url("/assets/images/home-hero-desktop.jpg");
   }
 }
